force-app/main/default/objects/custom_create181__c/custom_create181__c.object-meta.xml
<CustomObject>
    <label>Custom created object181</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects181</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>