force-app/main/default/objects/custom_create181__c/fields/custom_create_181field517__c.field-meta.xml
<CustomField>
    <fullName>custom_create_181field517__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 181field517</label>
    <type>Checkbox</type>
</CustomField>