force-app/main/default/objects/custom_create181__c/fields/custom_create_181field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_181field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 181field525</label>
    <type>Checkbox</type>
</CustomField>